Bug 1798117 - Only flush clipboard for text data. r=smaug, a=dmeehan

Otherwise Chromium gets confused when pasting (Signal is an Electron
application).

I need to dig a bit more, but this doesn't prevent the fix for
bug 1774285 from working, and fixes the issue here.

It's probably a Chromium bug that this doesn't work tho since,
as mentioned in comment 0, it works on other Windows applications.

Differential Revision: https://phabricator.services.mozilla.com/D160808